Deploy/deployment-services.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maid-content-api
spec:
  selector:
    matchLabels:
      app: maid-content-api
  replicas: 1
  template:
    metadata:
      labels:
        app: maid-content-api
    spec:
      containers:
      - name: maid-content-api
        image: maidadur/maid-content-api:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: maid-content-api
spec:
  selector:
    app: maid-content-api
  ports: 
    - port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maid-auth-api
spec:
  selector:
    matchLabels:
      app: maid-auth-api
  replicas: 1
  template:
    metadata:
      labels:
        app: maid-auth-api 
    spec:
      containers:
      - name: maid-auth-api
        image: maidadur/maid-auth-api:latest 
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: maid-auth-api
spec:
  selector:
    app: maid-auth-api
  ports: 
    - port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maid-ui
spec:
  selector:
    matchLabels:
      app: maid-ui
  replicas: 1
  template:
    metadata:
      labels:
        app: maid-ui
    spec:
      containers:
      - name: maid-ui
        image: maidadur/maid-ui:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: maid-ui
spec:
  selector:
    app: maid-ui
  ports:
    - port: 80
      targetPort: 80
---
